Changelog for Miosix np embedded OS

- Added class LPC2000Serial. The lpc2000 port no longer relies on
  the Console interface.
- Class TerminalDevice is no longer a proxy for a FileBase, but an adapter
  that allows to wrap a serial port, which has a Device interface into a
  FileBase interface.
- Removed class ConsoleDevice. The purpose of its interface is now carried
  out by the Device class of DevFs. This will allow to list serial ports
  among the devices of DevFs, and additionally results in code size reduction.
- Factorized common code in the various interrupts.h and interrupts.cpp from
  the various arch directories to miosix/common. Now all cortex bsps use the
  same code for handling fault interrupts, avoiding code duplication.
- Added forwarding of file mode in the open() syscall.
- Implemented may other syscalls.
- Rewritten syscall handling for processes. Fixed many vulnerabilites in the
  checking of syscall parameters.
- Fixed MPU size calculation, added _elf_pool_start and _elf_pool_end symbols
  that a linker script supporting processes must provide.
- Thread creation no longer calls errorHandler(OUT_OF_MEMORY) if there
  is no memory to create a thread. This has been done to prevent system
  reboots when the (kernel) heap is full, especially if a process creates
  another process.
- Refactored Thread::createUserspace() to call Thread::doCreate()
- Added a per-process FileDescriptorTable
- Added ProcessBase class. The kernel used to have a null pointer as process,
  now it has a ProcessBase instance, and is the only entity that has an
  instance of PRocessBase that is not also an instance of Process.
- Merged processes branch
- breaking change: updated newlib patch to make off_t a 64bit type. This allows
  accessing files larger than 4GByte for filesystems that support it (currently,
  only DevFs). This change requires recompiling GCC!
- Changed Fat32Fs so that reads and writes are directed to a generic file