@@ -1,5 +1,6 @@
 Changelog for Miosix np embedded OS
 
+- Fixed compiling kernel without WITH_FILESYSTEM
 - Added class LPC2000Serial. The lpc2000 port no longer relies on
   the Console interface.
 - Class TerminalDevice is no longer a proxy for a FileBase, but an adapter
